<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_guitar_horizontal_cut" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/all_songs_card_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:focusable="true"
...
            app:cardCornerRadius="@dimen/navigation_cardview_radius"
            app:cardElevation="@dimen/navigation_cardview_elevation"
            app:cardMaxElevation="@dimen/navigation_cardview_max_elevation"
            app:cardPreventCornerOverlap="false"
            app:contentPadding="@dimen/navigation_cardview_content_padding"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/fav_songs_card_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upper_space">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...
            app:cardCornerRadius="@dimen/navigation_cardview_radius"
            app:cardElevation="@dimen/navigation_cardview_elevation"
            app:cardMaxElevation="@dimen/navigation_cardview_max_elevation"
            app:cardPreventCornerOverlap="true"
            app:contentPadding="@dimen/navigation_cardview_content_padding"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/settings_card_view"
            app:layout_constraintStart_toEndOf="@+id/polish_card_view"
            app:layout_constraintTop_toBottomOf="@id/all_songs_card_view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...
