...
            android:layout_marginBottom="4dp"
            android:adjustViewBounds="true"
            android:contentDescription="Icon of song"
            app:layout_constraintBottom_toBottomOf="@+id/artist_txt_"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/song_title_txt_"
            app:srcCompat="@drawable/ic_songs" />

        <TextView
            android:id="@+id/song_title_txt_"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="10dp"
            android:singleLine="true"
            android:textAppearance="@style/ListItemTitle"
            app:layout_constraintEnd_toStartOf="@+id/favourite_btn_"
            app:layout_constraintStart_toEndOf="@+id/artist_img_"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="placeholder text" />

        <Space
            android:id="@+id/space"
...
