<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/song_lyric_line_txt_"
        style="@style/LyricOfDisplayedSong"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/song_chord_line_txt_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="placeholder text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/song_chord_line_txt_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="@+id/song_lyric_line_txt_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/song_lyric_line_txt_" />


</androidx.constraintlayout.widget.ConstraintLayout>